--- a/assets/css/populares.css
+++ b/assets/css/populares.css
@@ -1,5 +1,5 @@
 .populares {
-    padding: 3rem 2rem;
+    padding: 3rem 0;
 
 }
 
@@ -16,10 +16,7 @@
     "card-imagem"
     "card-corpo";
     grid-template-columns: 100%;
-    grid-template-rows: 173px auto;
     background: #fdfdfd;
-    margin-right: 1rem;
-    width: calc(20% - 1rem);
 }
 
 .populares__card:last-child {
